--- a/src/app/pages/forgotpassword/forgotpassword/forgotpassword.component.html
+++ b/src/app/pages/forgotpassword/forgotpassword/forgotpassword.component.html
@@ -8,7 +8,7 @@
         formControlName="email"
         type="email"
         id="email"
-        class="shadow-xs mt-3 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-[#248888] focus:border-[#248888] block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-xs-light"
+        class="shadow-xs mt-3 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-[#248888] focus:border-[#248888] block w-full p-2.5"
         required
       />
         <button
@@ -27,7 +27,7 @@
         formControlName="resetCode"
         type="text"
         id="resetCode"
-        class="shadow-xs mt-3 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-[#248888] focus:border-[#248888] block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-xs-light"
+        class="shadow-xs mt-3 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-[#248888] focus:border-[#248888] block w-full p-2.5"
         required
       />
         <button
@@ -47,7 +47,7 @@
         formControlName="email"
         type="email"
         id="email"
-        class="shadow-xs mt-3 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-[#248888] focus:border-[#248888] block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-xs-light"
+        class="shadow-xs mt-3 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-[#248888] focus:border-[#248888] block w-full p-2.5"
         required
       />
       
@@ -58,7 +58,7 @@
         formControlName="newPassword"
         type="password"
         id="newPassword"
-        class="shadow-xs mt-3 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-[#248888] focus:border-[#248888] block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-xs-light"
+        class="shadow-xs mt-3 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-[#248888] focus:border-[#248888] block w-full p-2.5"
         required
       />
         <button
