--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -8,7 +8,7 @@
     >
       <img
         src="/TROVE_is_ecoomerce_website_please_create_logo_to_this_website_ready_to_use_in_white_background_____with__click._buy._cart__as_slogan___1_-removebg-preview.png"
-        class="h-16 me-10"
+        class="h-16 me-10 "
         alt="Flowbite Logo"
       />
     </a>
@@ -75,7 +75,7 @@
                   routerLinkActive="customnavli"
                   routerLink="cart"
                   class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:hover:text-[#23b1a5] md:p-0"
-                  ><img src="/icons8-cart-32.png" alt=""
+                  ><img class=" ms-0" src="/icons8-cart-32.png" alt=""
                 /></a>
               </li>
 
@@ -96,9 +96,9 @@
       <button
         data-collapse-toggle="navbar-sticky"
         type="button"
-        class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+        class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200"
         aria-controls="navbar-sticky"
-        aria-expanded="false"
+        aria-expanded="true"
       >
         <span class="sr-only">Open main menu</span>
         <svg
@@ -118,7 +118,7 @@
         </svg>
       </button>
     </div>
-    <div class="hidden me-auto md:flex md:w-auto md:order-1" id="navbar-sticky">
+    <div class="hidden  me-auto md:flex md:w-auto md:order-1 " id="navbar-sticky">
       @if (islogin) {
       <ul
         class="flex flex-col p-4 md:p-0 mt-4 ms-0 font-medium border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white"
