--- a/src/app/pages/wishlist/wishlist/wishlist.component.html
+++ b/src/app/pages/wishlist/wishlist/wishlist.component.html
@@ -1,29 +1,37 @@
-
-
-
 <div class="w-8/12 mx-auto bg-[#fafafa] shadow-lg py-10 my-10">
-
-    <h2 class="text-center text-gray-600 font-bold mb-20  text-5xl"> {{"wishlist" | translate}}</h2>
+  <h2 class="text-center text-gray-600 font-bold mb-20 text-4xl md:text-5xl">
+    {{ "wishlist" | translate }}
+  </h2>
   @for (item of wishList; track item._id) {
 
-  <div class="card my-10 flex md:flex-row flex-col justify-center md:justify-between   border-b-2 w-[95%] md:w-[80%] mx-auto">
-    <div class="flex  md:flex-row flex-col">
-      <img class="w-[150px] self-center object-cover rounded-3xl my-5" [src]="item.imageCover" [alt]="item.title" />
+  <div
+    class="card my-10 flex md:flex-row flex-col border-b-2 justify-center md:justify-between w-[95%] md:w-[80%] mx-auto"
+  >
+    <div class="flex md:flex-row flex-col">
+      <img
+        class="w-[150px] self-center object-cover rounded-3xl my-5"
+        [src]="item.imageCover"
+        [alt]="item.title"
+      />
       <div class="ms-10">
-        <p class="text-2xl font-semibold my-2 text-[#248888]">{{ item.title }}</p>
-        <p class="text-gray-600 my-2  font-semibold text-xl">{{ item.price }} EGP</p>
+        <p class="text-2xl  font-semibold my-2 text-[#248888]">
+          {{ item.title }}
+        </p>
+        <p class="text-gray-600 my-2 font-semibold text-xl">
+          {{ item.price }} EGP
+        </p>
       </div>
     </div>
-    <div class="align-middle self-center ">
+    <div class="align-middle self-center">
       <button
-      (click)="removeItemFromWishlist(item.id)"
-       class="w-[120px] custombutton">
+        (click)="removeItemFromWishlist(item.id)"
+        class="w-[120px] mb-8 mt-5 custombutton"
+      >
         <span class="shadow"></span>
         <span class="edge"></span>
-        <span class="front text"> {{"remove" | translate }} </span>
+        <span class="front text"> {{ "remove" | translate }} </span>
       </button>
     </div>
-    
   </div>
   }
 </div>
